--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @diginexhk:registry=https://gitlab.com/api/v4/projects/28807495/packages/npm/
-//gitlab.com/api/v4/projects/28807495/packages/npm/:_authToken=${GITLAB_DIGINEX_TOKEN}
+//gitlab.com/api/v4/projects/28807495/packages/npm/:_authToken=${CI_JOB_TOKEN}
